order-form-v1.2/force-app/main/default/objects/SBQQ__Subscription__c/fields/Authorised_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Authorised_User_Count__c</fullName>
    <description>Twin of SBQQ__QuoteLine__c.Authorised_User_Count__c for renewal inheritance of the licence user count.</description>
    <label>Authorised User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>