order-form-v1.2/force-app/main/default/objects/SBQQ__Subscription__c/fields/Benefiting_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Benefiting_Group_Description__c</fullName>
    <description>Twin of SBQQ__QuoteLine__c.Benefiting_Group_Description__c for renewal inheritance of the printed Benefiting Group description.</description>
    <label>Benefiting Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>