order-form-v1.2/force-app/main/default/objects/SBQQ__Subscription__c/fields/Benefitting_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefitting_Group_Type__c</fullName>
    <description>Twin of SBQQ__QuoteLine__c.Benefitting_Group_Type__c for renewal inheritance of the group-type capture. Deliberately NOT twinning Benefitting_Group__c: its value set is a polluted legacy country list; the clean fields carry everything the document prints.</description>
    <label>Benefitting Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>