order-form-v1.2/force-app/main/default/objects/SBQQ__Subscription__c/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <description>Twin of SBQQ__QuoteLine__c.Function_Name__c for renewal inheritance of the Benefiting Group function name.</description>
    <label>Function Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>