order-form-v1.2/force-app/main/default/objects/SBQQ__Subscription__c/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <description>Twin of SBQQ__QuoteLine__c.Group_Size__c for renewal inheritance of the Benefiting Group size.</description>
    <label>Group Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>