order-form-v1.2/force-app/main/default/objects/SBQQ__Subscription__c/fields/License_Model__c.field-meta.xml
<CustomField>
    <fullName>License_Model__c</fullName>
    <description>Twin of SBQQ__QuoteLine__c.License_Model__c. CPQ copies same-named fields QuoteLine to Subscription at contracting and Subscription to renewal QuoteLine, so the licence model a customer signed carries into the renewal Order Form automatically.</description>
    <label>License Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorised Users</fullName>
            </value>
            <value>
                <fullName>Limited Access</fullName>
            </value>
            <value>
                <fullName>Benefiting Group</fullName>
            </value>
            <value>
                <fullName>Enterprise-Wide Access</fullName>
            </value>
            <value>
                <fullName>Individual License</fullName>
            </value>
            <value>
                <fullName>Team License</fullName>
            </value>
            <value>
                <fullName>Office License</fullName>
            </value>
            <value>
                <fullName>Group License</fullName>
            </value>
            <value>
                <fullName>Firmwide License</fullName>
            </value>
            <value>
                <fullName>Bespoke License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>